--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
       />
       <button type="submit">Search</button>
     </form>
-
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
+    <button type="button" class="load-more">Load more</button>
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
